# data-engineering-zoomcamp-project-2026

./: .env.example  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  entrypoint.sh
airflow/dags/: ais_dbt_dag.py
ais_transformations/: .user.yml  dbt_project.yml  profiles.yml
ais_transformations/models/: sources.yml
ais_transformations/models/marts/: vessel_activity.sql  vessel_last_position.sql
ais_transformations/models/staging/: stg_position_reports.sql
clickhouse/initdb/: 01_init_tables.sql
grafana/provisioning/dashboards/: ais_data_analysis.json  dashboard.yaml
grafana/provisioning/datasources/: clickhouse.yaml
streaming/: models.py  producer.py
